--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,4 +34,4 @@ parking_lot = "0.12"  # 高性能同步原语
 subtle = "2.6"        # 常量时间比较（防止时序攻击）
 rust-embed = "8"      # 嵌入静态文件
 mime_guess = "2"      # MIME 类型推断
-serde_cbor = "0.11"   # Kiro Web Portal API (rpc-v2-cbor) 编解码
+ciborium = "0.2"      # Kiro Web Portal API (rpc-v2-cbor) 编解码（替代已弃用的 serde_cbor）
