--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ subtle = "2.6"        # 常量时间比较（防止时序攻击）
 rust-embed = "8"      # 嵌入静态文件
 mime_guess = "2"      # MIME 类型推断
 ciborium = "0.2"      # Kiro Web Portal API (rpc-v2-cbor) 编解码（替代已弃用的 serde_cbor）
+async-trait = "0.1"   # 异步 trait 支持
