--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ parking_lot = "0.12"  # 高性能同步原语
 subtle = "2.6"        # 常量时间比较（防止时序攻击）
 rust-embed = "8"      # 嵌入静态文件
 mime_guess = "2"      # MIME 类型推断
+redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }  # Redis 客户端
