feat: 添加 sensitive-logs feature flag 控制敏感日志输出
默认不输出完整请求体日志（仅记录字节数），
启用 sensitive-logs feature 后才输出完整内容。
避免生产环境意外泄露用户对话内容。

使用方式：cargo build --features sensitive-logs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 lto = true
 strip = true
 
+[features]
+sensitive-logs = []  # 启用后输出完整请求/响应体日志（仅用于调试）
+
 [dependencies]
 axum = "0.8"
 tokio = { version = "1.0", features = ["full"] }
