feat: 添加流量监控模块    (flow-monitor)    新增 SQLite 流量记录存储，支持按模型/状态/时间过滤查询、                               统计面板和分页浏览。前端使用 React Query 轮询 + shadcn/ui                              组件实现实时监控仪表盘。                                                                                                                                                      后端:                                                                                  - flow_monitor 模块: store (批量写入+spawn_blocking)、                                   handlers (RFC3339 校验)、router (认证中间件)、types    - anthropic middleware: 记录请求流量并提取上游真实状态码    - DELETE /flows 使用 query param 而非 request body
   前端:
   - flow-monitor.tsx: 统计卡片、模型筛选、状态筛选、分页表格、
     Dialog 确认清空（替代 native confirm）
   - flows.ts: API 层 (axios)
   - use-flows.ts: React Query hooks (轮询+缓存失效)
   - dashboard.tsx: 流量监控 tab 集成

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 /admin-ui/pnpm-lock.yaml
 /admin-ui/package-lock.json
 /admin-ui/tsconfig.tsbuildinfo
-/credentials.*
-/kiro_balance_cache.json
-/kiro_stats.json
+*/credentials.*
+*/kiro_balance_cache.json
+*/kiro_stats.json
+/config/*
+.omc/*
+.ace-tool/
+.tmp/*
