--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
     ports:
       - "127.0.0.1:8990:8990"
     volumes:
-      - ./config.json:/app/config/config.json:ro
-      - ./credentials.json:/app/config/credentials.json
+      - ./config/config.json:/app/config/config.json:ro
+      - ./config/credentials.json:/app/config/credentials.json
     restart: unless-stopped
